--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "next": "14.2.13",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
+    "react-intl": "^7.1.6",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
